[package]
name = "yamson"
version = "1.0.1"
description = "A simple tool to convert YAML to JSON and vice versa."
repository = "https://github.com/WebDevCaptain/yamson"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
